# libc

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: assert.h  complex.h  ctype.h  errno.h  fenv.h  float.h  inttypes.h  iso646.h  limits.h  locale.h  math.h  setjmp.h  signal.h  stdalign.h  stdarg.h  stdatomic.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  stdnoreturn.h  string.h  tgmath.h  threads.h  time.h  uchar.h  wchar.h  wctype.h
include/cxx/: algorithm  atomic  bit  cctype  cerrno  cfenv  cfloat  cinttypes  climits  clocale  cmath  compare  concepts  csetjmp  csignal  cstdarg  cstddef  cstdint  cstdio  cstdlib  cstring  ctime  cuchar  cwchar  cwctype  exception  functional  initializer_list  ios  iosfwd  iostream  istream  iterator  limits  locale  map  memory  mutex  new  optional  (+14 more)
include/internal/: attribute.h  bit.h  branch.h  datamodel.h  exception.h  stddef.h  unreachable.h  version.h
include/internal/cxx/: stddef.h
include/internal/cxx/__cxxabi/: guard.h  typeinfo.h
include/internal/cxx/algorithm/: minmax.h  seq.h
include/internal/cxx/exception/: bad_exception.h  exception.h  terminate.h
include/internal/cxx/functional/: compare.h  ref.h
include/internal/cxx/fwd/: iosfwd.h  istreamfwd.h  iteratorfwd.h  localefwd.h  memoryfwd.h  ostreamfwd.h  streambuffwd.h  stringfwd.h
include/internal/cxx/ios/: basic_ios.h  fpos.h  ios_base.h  manipulators.h  types.h
include/internal/cxx/iostream/: stdin_streambuf.h  stdout_streambuf.h
include/internal/cxx/istream/: basic_iostream.h  basic_istream.h  manipulators.h
include/internal/cxx/iterator/: base.h  functions.h  fwd.h  istreambuf_iterator.h  ostreambuf_iterator.h  reverse_iterator.h  tags.h  traits.h
include/internal/cxx/limits/: numeric_limits.h
include/internal/cxx/locale/: ctype.h  facet.h  locale.h  num_get.h  num_put.h
include/internal/cxx/memory/: addressof.h  allocator.h  allocator_traits.h  default_delete.h  pointer_traits.h  to_address.h  uninit.h  unique_ptr.h
include/internal/cxx/new/: align_val.h  bad_alloc.h  destroying_delete.h  handler.h  launder.h  nothrow.h  operator.h
include/internal/cxx/optional/: bad_optional_access.h  nullopt.h  optional.h
include/internal/cxx/ostream/: basic_ostream.h  manipulators.h  operator.h
include/internal/cxx/sstream/: basic_istringstream.h  basic_ostringstream.h  basic_stringbuf.h  basic_stringstream.h
include/internal/cxx/stdexcept/: logic_error.h  runtime_error.h  stdexcept_string.h
include/internal/cxx/string/: fwd.h  (+3 more)
src/assert/: CMakeLists.txt  __assertion_failed.c
src/complex/: CMakeLists.txt
src/ctype/: CMakeLists.txt  __ctype_table.c  isalnum.c  isalpha.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  tolower.c  toupper.c
src/cxx/__cxxabi/: CMakeLists.txt
src/cxx/__cxxabi/guard/: abort.cpp  acquire.cpp  release.cpp
src/cxx/__cxxabi/typeinfo/: __array_type_info.cpp  __base_class_type_info.cpp  __class_type_info.cpp  __dynamic_cast.cpp  __enum_type_info.cpp  __function_type_info.cpp  __fundamental_type_info.cpp  __pbase_type_info.cpp  __pointer_to_member_type_info.cpp  __pointer_type_info.cpp  __si_class_type_info.cpp  __vmi_class_type_info.cpp  eh_runtime.cpp  type_info.cpp
src/cxx/bit/: CMakeLists.txt  __bswapdi2.c  __bswapsi2.c  __ctzdi2.c  __popcountdi2.c  __popcountsi2.c
src/cxx/exception/: CMakeLists.txt  bad_exception.cpp  exception.cpp  terminate.cpp
src/cxx/ios/: CMakeLists.txt  ios_base.cpp  manipulators.cpp
src/cxx/iostream/: CMakeLists.txt  iostream.cpp
src/cxx/locale/: CMakeLists.txt  ctype.cpp  locale.cpp
src/cxx/new/: CMakeLists.txt  bad_alloc.cpp  handler.cpp  operator.cpp
src/cxx/optional/: CMakeLists.txt  bad_optional_access.cpp
src/cxx/stdexcept/: CMakeLists.txt  logic_error.cpp  runtime_error.cpp  stdexcept_string.cpp
src/cxx/string/: CMakeLists.txt  stox.cpp  to_string.cpp
src/cxx/typeinfo/: CMakeLists.txt  __cxxabi.cpp  exception.cpp  type_info.cpp
src/cxx/typeinfo/__cxxabiv1/: __array_type_info.cpp  __base_class_type_info.cpp  __class_type_info.cpp  __enum_type_info.cpp  __function_type_info.cpp  __fundamental_type_info.cpp  __pbase_type_info.cpp  __pointer_to_member_type_info.cpp  __pointer_type_info.cpp  __si_class_type_info.cpp  __vmi_class_type_info.cpp  eh_runtime.cpp  type_info.cpp
src/errno/: CMakeLists.txt  __errno.c
src/fenv/: CMakeLists.txt
src/float/: CMakeLists.txt
src/inttypes/: CMakeLists.txt
src/iso646/: CMakeLists.txt
src/limits/: CMakeLists.txt
src/locale/: CMakeLists.txt
src/math/: CMakeLists.txt
src/setjmp/: CMakeLists.txt  longjmp.S  setjmp.S
src/signal/: CMakeLists.txt  raise.c  signal.c
src/stdalign/: CMakeLists.txt
src/stdarg/: CMakeLists.txt
src/stdatomic/: CMakeLists.txt
src/stdbool/: CMakeLists.txt
src/stddef/: CMakeLists.txt
src/stdint/: CMakeLists.txt
src/stdio/: CMakeLists.txt  __ffinalize.c  __finitialize.c  __vformat.c  clearerr.c  fclose.c  feof.c  ferror.c  fflush.c  fgetc.c  fgetpos.c  fgets.c  fopen.c  fprintf.c  fputc.c  fputs.c  fread.c  freopen.c  fscanf.c  fseek.c  fsetpos.c  ftell.c  fwrite.c  getc.c  getchar.c  gets.c  gets_s.c  perror.c  printf.c  putc.c  putchar.c  puts.c  remove.c  rename.c  rewind.c  scanf.c  setbuf.c  setvbuf.c  snprintf.c  sprintf.c  (+11 more)
src/stdlib/: CMakeLists.txt  _Exit.c  __alloc.c  abort.c  abs.c  aligned_alloc.c  at_quick_exit.c  atexit.c  atoi.c  atol.c  atoll.c  calloc.c  div.c  exit.c  free.c  getenv.c  ldiv.c  lldiv.c  malloc.c  quick_exit.c  realloc.c  setenv.c  strtol.c  strtoll.c  strtoul.c  strtoull.c
src/stdnoreturn/: CMakeLists.txt
src/string/: CMakeLists.txt  __has_null.h  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strcspn.c  strerror.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strnlen.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c
src/tgmath/: CMakeLists.txt
src/threads/: CMakeLists.txt
src/time/: CMakeLists.txt
src/uchar/: CMakeLists.txt
src/wchar/: CMakeLists.txt
src/wctype/: CMakeLists.txt
(+45 files in other folders)
